--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <header class="container-fluid" id="header" style="padding:10px; overflow-x: hidden;">
   <div class="adversing-top">🧞‍♀️
     Próximo lançamento quinta-feira, 22/09, às 11h️</div>
-  <div class="row align-content-center align-items-center items-topo">
+  <div class="row align-content-center align-items-center items-topo" id="nav-menu">
     <!--Botão menu hamburger fica a esqueda superior-->
-    <span class="menu-hamburger"></span>
+    <span class="menu-hamburger" id="menu-hamburger"></span>
     
     <!--Logo Tapilogie (em texto - fonte já definida por fonts/fonts.css)-->
     <a id="logo" href="#" class="col-4">tapilogie</a>
@@ -28,10 +28,10 @@
   </section>
   </div>
   <!--Menu com a lista de links -->
-  <div class="row d-md-none d-none">
-    <nav id="menu" class="col">
-      <ul>
-        <li class="row nav-item"><a href="#">Tapetes Vintage</a></li>
+  <div class="row">
+    <nav id="nav" class="col">
+      <ul id="menu">
+        <li id="primeiro-item" class="row nav-item"><a href="#">Tapetes Vintage</a></li>
         <li class="row nav-item"><a href="#"> Tapetes de Oncinha</a></li>
         <li class="row nav-item" ><a href="#">Outros ></a></li>
         <li class="row nav-item"><a href="#">Sobre nós</a></li>
@@ -43,7 +43,7 @@
 </header>
 
 
-  
+    <script src="js-menu-mobile/js-menu-mobile.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
 </body>
