Ajustando itens a links dentro dos Li>A

--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
   <div class="row">
     <nav id="nav" class="col">
       <ul id="menu">
-        <li id="primeiro-item" class="row nav-item"><a href="#">Tapetes Vintage</a></li>
-        <li class="row nav-item"><a href="#"> Tapetes de Oncinha</a></li>
-        <li class="row nav-item" ><a href="#">Outros ></a></li>
-        <li class="row nav-item"><a href="#">Sobre nós</a></li>
-        <li class="row nav-item"><a href="#">Contato</a></li>
-        <li class="row nav-item"><a href="#">Tapetes Vintage</a></li>
+        <li id="primeiro-item" class="row nav-item"><a  style="width:100%;" href="#">Tapetes Vintage</a></li>
+        <li class="row nav-item"><a style="width:100%;" href="#"> Tapetes de Oncinha</a></li>
+        <li class="row nav-item"><a style="width:100%;" style="width:100%; border:1px solid red;" class="row d-flex justify-content-between" href="#"><span class="col-10">Outros</span> <span class="col-1">></span></a></li>
+        <li class="row nav-item"><a style="width:100%;" href="#">Sobre nós</a></li>
+        <li class="row nav-item"><a style="width:100%;" href="#">Contato</a></li>
+        <li class="row nav-item"><a style="width:100%;" href="#">Tapetes Vintage</a></li>
       </ul>
     </nav>
   </div>
